Fixing Styles
Added and deleted features that did not fit the criteria that I was aiming for, I experimented with some of the stuff and this was the end product of that trial and error.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 
   body {
-    background-image: url("Images/2.png");
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("Images/2.png");
     background-color: rgba(0,0,0,0.5);
     background-size: cover;
     background-repeat: no-repeat;
@@ -25,37 +25,14 @@
     top: 300px;
     left: 50px;
     font-size: 20px;
-    background-color: rgba(61, 37, 75, 0.25);
+    background-color: rgba(89, 28, 202, 0.25);
 }
 
-.navbar-brand {
-  color: blueviolet;
-  font-family: "pencilized";
-}
 
 @font-face {
   font-family: "pencilized";
   src: url(Font\PencilizedDemo.ttf;)
 }
-
-
-.card {
-  overflow: hidden;
-  max-height: 100px;
-  transition: max-height 0.5 ease;
-  width: 200px;
-  height: 230px;
-  display: inline-block;
-  border-radius: 10px;
-  padding: 15px 25px;
-  box-sizing: border-box;
-  cursor: pointer;
-  margin: 10px 15px;
-  background-image: url();
-  background-position: center;
-  background-size: cover;
-}
-
 
 a {
   font-weight: 400;
@@ -100,8 +77,17 @@ a {
 
 
 .LogoNav {
- height: 80px;
- width: 150px;
+ height: 50px;
+ width: 50px;
+}
+
+h1{
+  color: rgba(255, 255, 255, 0.699);
+  font-size: 80px;
+  padding: 13px 35px;
+  display: flex;
+  margin-right: 25px;
+  margin-left: 25px;
 }
 
 
